feat(JavaLanguage): возможно пофиксил рендеринг ProgramEntryPoint